--- a/about.html
+++ b/about.html
@@ -17,7 +17,8 @@
             <a class="cabecalho__menu__link" href="about.html">Sobre mim </a>
         </nav>
     </header>
-    <main>
+    <main class ="apresentacao">
+        <section  class ="apresentacao__conteudo">
         <h1 class="apresentacao2"> Olá prazer ! meu nome e Bárbara Elen</h1>
         <p class="curriculo ">
             Entusiasta da tecnologia em transição de carreira! <br>
@@ -54,7 +55,10 @@
             TECBRAS CURSOS TECNICO LTDA
             TECNICO EM ENFERMAGEM, ENFEMAGEM · (janeiro de 2020 - fevereiro de
             2022)</p>
-    </main>
+  
+</section>
+<img class ="foto1" src ="foto.barbara.jpg" alt = "foto perfil barbara">
+</main>
     <footer class="rodape">
         <p>Desenvolvido por Bárbara Nunes Programer</p>
     </footer>
