--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
                 <img src ="assets\github.png">
                 GitHub</a>
             <a  class="apresentacao__links__link"href="https://wa.me/5564992896111">
+                <img src ="assets\whatsapp.png">
                 WhatsApp</a>
         </div>
     </section>
