--- a/about.html
+++ b/about.html
@@ -17,10 +17,10 @@
             <a class="cabecalho__menu__link" href="about.html">Sobre mim </a>
         </nav>
     </header>
-    <main class ="apresentacao">
-        <section  class ="apresentacao__conteudo">
-        <h1 class="apresentacao2"> Olá prazer ! meu nome e Bárbara Elen</h1>
-        <p class="curriculo ">
+         <main class ="apresentacao">
+        <section class ="apresentacao__conteudo">
+        <h1 class="referencias"> Olá prazer ! meu nome e Bárbara Elen</h1>
+        <p class="referencias">
             Entusiasta da tecnologia em transição de carreira! <br>
             Com 30 anos, iniciei minha jornada acadêmica em Sistemas e Informação
             na Unopar. ‍ Vindo da área de Nail Design e Manicure, estou
