--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -27,14 +27,14 @@
                 <img src ="assets\github.png">
                 GitHub</a>
             <a  class="apresentacao__links__link"href="https://wa.me/5564992896111">
-                <img src ="assets\whatsapp.png">
+                <img src ="assets/whatsapp.png">
                 WhatsApp</a>
         </div>
     </section>
          <img class ="foto" src ="foto.barbara.jpg" alt = "foto perfil barbara">
         </main>
         <footer class="rodape">
-            <p>Desenvolvido por Bárbara Nunes Programer</p> 
+            <p>Desenvolvido por Bárbara Nunes Programer - barbaranunesprogramer@hotmail.com</p> 
         </footer>
         
 </body>
