--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Portfolio Barbara</title>
+    <title>Portfolio Bárbara</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -20,10 +20,10 @@
             <p class ="apresentacao__conteudo__texto">Olá! Sou Bárbara Elen , desenvolvedora Front-end com especialidade em  HTML e CSS. Ajudo pequenos negócios e designers a colocarem em prática boas ideias.<strong>Vamos conversar?</strong></p>
             <div class = "apresentacao__links">
                 
-            <a class="apresentacao__links__link" href="https://www.linkedin.com/in/barbaranunesprogramer/">
+            <a class="apresentacao__links__link" href="https://www.linkedin.com/in/barbaranunesprogrammer/">
                 <img src="assets\linkedin.png">
                 LinkedIn</a>
-            <a  class="apresentacao__links__link"href="https://github.com/barbaranunesprogramer">
+            <a  class="apresentacao__links__link"href="https://github.com/barbaranunesprogrammer">
                 <img src ="assets\github.png">
                 GitHub</a>
             <a  class="apresentacao__links__link"href="https://wa.me/5564992896111">
@@ -34,7 +34,7 @@
          <img class ="foto" src ="foto.barbara.jpg" alt = "foto perfil barbara">
         </main>
         <footer class="rodape">
-            <p>Desenvolvido por Bárbara Nunes Programer - barbaranunesprogramer@hotmail.com</p> 
+            <p>Desenvolvido por Bárbara Nunes Programmer - barbaranunesprogramer@hotmail.com</p> 
         </footer>
         
 </body>
