--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
          <img class ="foto" src ="foto.barbara.jpg" alt = "foto perfil barbara">
         </main>
         <footer class="rodape">
-            <p>Desenvolvido por Bárbara Nunes Programmer - barbaranunesprogramer@hotmail.com</p> 
+            <p>Desenvolvido por Bárbara Nunes Programmer - barbaranunesprogramer@outlook.com</p> 
         </footer>
         
 </body>
