--- a/about.html
+++ b/about.html
@@ -2,67 +2,99 @@
 <html lang="pt-br">
 
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
-
-    <title>Sobre mim </title>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Sobre Mim - Bárbara Nunes</title>
+    <link rel="stylesheet" href="css/style2.css" />
+    <link href="https://fonts.googleapis.com/css2?family=Krona+One&family=Montserrat:wght@400;600&display=swap"
+        rel="stylesheet" />
 </head>
 
-<body>
+<body class="about">
     <header class="cabecalho">
         <nav class="cabecalho__menu">
-            <a class="cabecalho__menu__link" href="index.html"> Home </a>
-            <a class="cabecalho__menu__link" href="about.html">Sobre mim </a>
+            <a class="cabecalho__menu__link" href="index.html">Home</a>
+            <a class="cabecalho__menu__link" href="https://www.linkedin.com/in/barbaranunesprogrammer/">LinkedIn</a>
+            <a class="cabecalho__menu__link" href="https://github.com/barbaranunesprogrammer" target="_blank">GitHub</a>
+
         </nav>
     </header>
-         <main class ="apresentacao">
-        <section class ="apresentacao__conteudo">
-        <h1 class="referencias"> Olá prazer ! meu nome e Bárbara Elen</h1>
-        <p class="referencias">
-            Entusiasta da tecnologia em transição de carreira! <br>
-            Com 30 anos, iniciei minha jornada acadêmica em Sistemas e Informação
-            na Unopar. ‍ Vindo da área de Nail Design e Manicure, estou
-            mergulhando de cabeça no universo tech, explorando oportunidades
-            empolgantes.<br>
-            Técnica de enfermagem de formação, minha paixão pelo.
-            aprendizado me levou a dominar o básico de JavaScript,
-            HTML e CSS! Determinada, proativa e sempre curiosa, busco
-            constantemente expandir meus horizontes na área.<br>
-            Além disso, sou uma mãe dedicada, equilibrando o desafio
-            empolgante da maternidade com minha jornada no desenvolvimento
-            web.</p>
-        <h2 class="tituloref"> Experiência</h2>
-        <p class="referencias"> FOX MOTO PEÇAS RIO VERDE<br>
-            Assistente de loja<br>
-            agosto de 2019 - Present (4 anos 5 meses)<br>
-            Rio Verde, Goiás, Brasil<br>
-            empresa de familia , trabalho tanto no atendimento ao publico , quanto em
-            estoque.<br><br>
-            JESUS ALVES DE SOUSA EIRELI-ME<br>
-            Assistente administrativo<br>
-            novembro de 2016 - abril de 2018 (1 ano 6 meses)<br>
-            Rio Verde, Goiás, Brasil<br>
-            PLANEJAMENTO PARA PREGÕES VIRTUAIS E PRESENCIAIS
-            PLANILHAS , DOCUMENTAÇÃO E CADASTRO NOS PREGÕES .</p>
-        <h3 class="tituloref">Formação acadêmica</h3>
-        <p class="referencias2"> UNOPAR - Universidade Norte do Paraná
-            BACHARELADO E SISTEMA DA INFORMAÇÃO, Administração de Redes e
-            Sistemas · (outubro de 2023 - junho de 2027)<br>
-            Alura
-            Programador, Programacao · (dezembro de 2023 - dezembro de 2024)<br>
-            TECBRAS CURSOS TECNICO LTDA
-            TECNICO EM ENFERMAGEM, ENFEMAGEM · (janeiro de 2020 - fevereiro de
-            2022)</p>
-  
-</section>
-<img class ="foto1" src ="foto.barbara.jpg" alt = "foto perfil barbara">
-</main>
+
+    <div class="wrapper2">
+        <main class="apresentacao">
+            <section class="apresentacao__conteudo">
+                <h1 class="tituloref">Oi! Eu sou a Bárbara Elen 👋✨</h1>
+
+                <p class="referencias">
+                    Mãe atípica | Faturista hospitalar | Estudante de Sistemas de Informação | Em busca de oportunidades
+                    na área de tecnologia
+                </p>
+
+                <p class="referencias">
+                    Atualmente atuo como <strong>faturista em hospital público</strong>, com sólida experiência em
+                    auditoria SUS e processos administrativos. Paralelamente, estou me reinventando como desenvolvedora
+                    Front-End, estudando com foco em <strong>UX, acessibilidade e boas práticas de código
+                        limpo</strong>.
+                </p>
+
+                <p class="referencias">
+                    Sou <strong>mãe atípica</strong> e <strong>mulher em transição de carreira</strong>. Conciliar
+                    maternidade, trabalho e estudos exige força, foco e resiliência — valores que levo comigo também no
+                    ambiente profissional.
+                </p>
+
+                <p class="referencias">
+                    Estou à procura de uma <strong>oportunidade de estágio ou vaga júnior</strong> em tecnologia no
+                    contraturno do meu trabalho atual. Quero aprender, crescer e contribuir com propósito em projetos
+                    que impactem positivamente a sociedade.
+                </p>
+
+                <p class="referencias">
+                    <em>✨ A tecnologia me encontrou, e eu escolhi não soltar mais.</em>
+                </p>
+                <p class="referencias">
+                    <strong>Assistente de Loja - FOX Moto Peças</strong><br />
+                    Atuação no atendimento ao público, controle de estoque e organização interna. (Ago/2019 -
+                    Atual)<br /><br />
+                    <strong>Assistente Administrativo - Jesus Alves de Sousa EIRELI</strong><br />
+                    Planejamento e suporte a pregões virtuais e presenciais, elaboração de planilhas e gestão de
+                    documentos. (Nov/2016 - Abr/2018)
+                </p>
+
+                <h2 class="tituloref">Formação Acadêmica</h2>
+                <p class="referencias2">
+                    <strong>UNOPAR</strong> – Bacharelado em Sistemas de Informação<br />
+                    (2023 - 2026)<br /><br />
+                    <strong>Alura</strong> – Formação em Programação Web<br />
+                    (2025 - 2026)<br /><br />
+                    <strong>Alura</strong> – Formação em Programação Web<br />
+                    (2023 - 2024)<br /><br />
+
+                    <strong>Tecbras</strong> – Técnico em Enfermagem<br />
+                    (2020 - 2022)
+                </p>
+
+                <h2 class="tituloref">GitHub</h2>
+                <p class="referencias">
+                    Acesse meus projetos, estudos e evoluções no GitHub:<br />
+                    <a href="https://github.com/barbaranunesprogrammer" target="_blank"
+                        class="cabecalho__menu__link">github.com/barbaranunesprogrammer</a>
+                </p>
+
+                <h2 class="tituloref">Me acompanhe:</h2>
+                <p class="referencias">
+                    <a href="https://github.com/barbaranunesprogrammer" target="_blank"
+                        class="cabecalho__menu__link">GitHub: barbaranunesprogrammer</a>
+                </p>
+            </section>
+
+            <img class="foto1" src="assets/img/foto.barbara.jpg" alt="Foto de Bárbara Nunes" />
+        </main>
+    </div>
+
     <footer class="rodape">
         <p>Desenvolvido por Bárbara Nunes Programer</p>
     </footer>
-
 </body>
 
 </html>
