--- a/index.html
+++ b/index.html
@@ -1,41 +1,56 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfolio Bárbara</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="css/style.css">
 </head>
-<body>
-    <header class = "cabecalho"> 
-        <nav class ="cabecalho__menu">
-            <a class ="cabecalho__menu__link" href="index.html"> Home </a>
-            <a class ="cabecalho__menu__link" href="about.html">Sobre mim </a>
+
+<body class="index">
+    <header class="cabecalho">
+        <nav class="cabecalho__menu">
+            <a id="home" class="cabecalho__menu__link" href="index.html"> Home </a>
+            <a class="cabecalho__menu__link" href="about.html">Sobre mim </a>
         </nav>
     </header>
-        <main class ="apresentacao">
-            <section class ="apresentacao__conteudo">
-            <h1 class ="apresentacao__conteudo__titulo">Eleve seu negócio digital a outro nível<strong class="titulo"> com um Front-end de qualidade!</strong></h1>
-            <p class ="apresentacao__conteudo__texto">Olá! Sou Bárbara Elen , desenvolvedora Front-end com especialidade em  HTML e CSS. Ajudo pequenos negócios e designers a colocarem em prática boas ideias.<strong>Vamos conversar?</strong></p>
-            <div class = "apresentacao__links">
-                
-            <a class="apresentacao__links__link" href="https://www.linkedin.com/in/barbaranunesprogrammer/">
-                <img src="assets\linkedin.png">
-                LinkedIn</a>
-            <a  class="apresentacao__links__link"href="https://github.com/barbaranunesprogrammer">
-                <img src ="assets\github.png">
-                GitHub</a>
-            <a  class="apresentacao__links__link"href="https://wa.me/5564992896111">
-                <img src ="assets/whatsapp.png">
-                WhatsApp</a>
-        </div>
-    </section>
-         <img class ="foto" src ="foto.barbara.jpg" alt = "foto perfil barbara">
+    <div class="wrapper">
+
+        <main class="apresentacao">
+            <section class="apresentacao__conteudo">
+                <h1 class="apresentacao__conteudo__titulo">Eleve seu negócio digital a outro nível<strong
+                        class="titulo">
+                        com um Front-end de qualidade!</strong></h1>
+                <p class="apresentacao__conteudo__texto">Olá! Sou Bárbara Elen , desenvolvedora Front-end trainee com
+                    especialidade
+                    em HTML e CSS. Ajudo pequenos negócios e designers a colocarem em prática boas ideias.<strong>Vamos
+                        conversar?</strong></p>
+
+            </section>
+            <aside>
+                <div class="apresentacao__links">
+
+                    <a class="apresentacao__links__link" href="https://www.linkedin.com/in/barbaranunesprogrammer/">
+                        <img src="assets/img/linkedin.png">
+                        LinkedIn</a>
+                    <a class="apresentacao__links__link" href="https://github.com/barbaranunesprogrammer">
+                        <img src="assets/img/github.png">
+                        GitHub</a>
+                    <a class="apresentacao__links__link" href="https://wa.me/5564992896111">
+                        <img src="assets/img/whatsapp.png">
+                        WhatsApp</a>
+                </div>
+
+            </aside>
+            <img class="foto" src="assets/img/foto.barbara.jpg" alt="foto perfil barbara">
         </main>
-        <footer class="rodape">
-            <p>Desenvolvido por Bárbara Nunes Programmer - barbaranunesprogramer@outlook.com</p> 
-        </footer>
-        
+    </div>
+    <footer class="rodape">
+        <p>Desenvolvido por Bárbara Nunes Programmer - barbaranunesprogramer@outlook.com</p>
+    </footer>
+
 </body>
+
 </html>
