--- a/index.html
+++ b/index.html
@@ -27,6 +27,15 @@
                     especialidade
                     em HTML e CSS. Ajudo pequenos negócios e designers a colocarem em prática boas ideias.<strong>Vamos
                         conversar?</strong></p>
+                <details class="apresentacao__conteudo__detalhes">
+                    <summary>Alguns dos meus Projetos</summary>
+
+                    <a class="detalhes" href="https://loucosporhp.vercel.app/">Loucos Por Harry Potter</a></br>
+                    <a lass="detalhes" href="https://fox-restauracao.vercel.app/">Fox Restauração Veicular</a></br>
+                    <a lass="detalhes" href="https://vercel.com/barbaranunesprogramadora/mundo-pet">Mundo Pet</a>
+                </details>
+
+
 
             </section>
             <aside>
