--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 
                     <a class="detalhes" href="https://loucosporhp.vercel.app/">Loucos Por Harry Potter</a></br>
                     <a lass="detalhes" href="https://fox-restauracao.vercel.app/">Fox Restauração Veicular</a></br>
-                    <a lass="detalhes" href="https://vercel.com/barbaranunesprogramadora/mundo-pet">Mundo Pet</a>
+                    <a lass="detalhes" href="https://mundo-pet-sand.vercel.app/">Mundo Pet</a>
                 </details>
 
 
